tests/rosetta/out/Java/concurrent-computing-3.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// concurrent-computing-3.mochi
import java.util.*;

public class ConcurrentComputing3 {
    static int i = 0;
    static List<String> shuffle(List<String> xs) {
        List<String> arr = xs;
        int i = arr.size() - 1;
        while (i > 0) {
            int j = System.currentTimeMillis() % (i + 1);
            List<String> tmp = arr.get(i);
            arr.set(i, arr.get(j));
            arr.set(j, tmp);
            i = (int)(i - 1);
        }
        return arr;
    }
    public static void main(String[] args) {
        while (i < 3) {
            System.out.println("");
            for (String w : shuffle(Arrays.asList("Enjoy", "Rosetta", "Code"))) {
                System.out.println(w);
            }
            i = (int)(i + 1);
        }
    }
}
